bitfield/tests/09-variant-out-of-range.stderr
error[E0277]: the trait bound `DeliveryModeDiscriminant<8>: DeliveryModeDiscriminantInRange` is not satisfied
  --> tests/09-variant-out-of-range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DeliveryModeDiscriminantInRange` is not implemented for `DeliveryModeDiscriminant<8>`
   |
   = help: the following other types implement trait `DeliveryModeDiscriminantInRange`:
             DeliveryModeDiscriminant<0>
             DeliveryModeDiscriminant<1>
             DeliveryModeDiscriminant<2>
             DeliveryModeDiscriminant<3>
             DeliveryModeDiscriminant<4>
             DeliveryModeDiscriminant<5>
             DeliveryModeDiscriminant<6>
             DeliveryModeDiscriminant<7>
